--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pg": "^7.7.1",
+    "pug": "2.0.0-beta11",
+    "sequelize": "^4.42.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
