Install packages for login and sign up
installed passportjs passport-local validator bcrypt
express-session connect-flash

--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "start": "if [[ $NODE_ENV == 'production' ]]; then node ./bin/www; else nodemon ./bin/www; fi"
   },
   "dependencies": {
+    "bcrypt": "^3.0.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.7.1",
     "pug": "2.0.0-beta11",
-    "sequelize": "^4.42.0"
+    "sequelize": "^4.42.0",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
