--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "lodash": "^4.17.11",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^7.7.1",
     "pug": "2.0.0-beta11",
     "sequelize": "^4.42.0",
