Stripe package added

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^7.7.1",
     "pug": "^2.0.3",
     "sequelize": "^4.42.0",
+    "stripe": "^6.30.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
