Update package-lock and package.json
Added new package request, request-promise to make request to
mailchimp rest api to update mailchimp subscribers.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "passport-twitter": "^1.0.4",
     "pg": "^7.7.1",
     "pug": "^2.0.3",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "sequelize": "^4.42.0",
     "stripe": "^6.30.0",
     "validator": "^10.11.0"
